--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.navbar{
+  width: 100%;
+  height: 10vh;
+  background-color: white;
+border: 1px solid black;
+display: flex;
+align-items: center;
+
+  box-shadow: -7px -1px 68px -17px rgba(0, 0, 0, 0.98);
+  -webkit-box-shadow: -7px -1px 48px -17px rgba(0, 0, 0, 0.98);
+  -moz-box-shadow: -7px -1px 68px -17px rgba(0, 0, 0, 0.98);
+}
+.logotext{
+  font-size: 1.5rem;
+  font-weight: 900;
+  margin-left: 1rem;
+  
+}
+.body{
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+  border: 1px solid black;
+  box-shadow: -7px -1px 68px -17px rgba(0, 0, 0, 0.98);
+  -webkit-box-shadow: -7px -1px 48px -17px rgba(0, 0, 0, 0.98);
+  -moz-box-shadow: -7px -1px 68px -17px rgba(0, 0, 0, 0.98);
+  margin-top: 0.3rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Qrcode{
+  width: 100vw;
+  height: 100vh;
+  overflow-y:scroll ;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  gap: 2rem;
+ 
 }
 
-.App-link {
-  color: #61dafb;
+
+.form__field {
+  font-family: inherit;
+  
+  border: 0;
+  border-bottom: 2px solid #9b9b9b;
+  outline: 0;
+  font-size: 1.3rem;
+  color: rgb(0, 0, 0);
+  padding: 7px 0;
+  
+  transition: border-color 0.2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form__field:placeholder-shown ~ .form__label {
+  font-size: 1.3rem;
+  cursor: text;
+  top: 20px;
 }
+
+
+
+.form__field:focus {
+  padding-bottom: 6px;
+  font-weight: 700;
+  border-width: 3px;
+  border-image: linear-gradient(to right, #11998e, #38ef7d);
+  border-image-slice: 1;
+}
+
+
+/* reset input */
+.form__field:required, .form__field:invalid {
+  box-shadow: none;
+}
+.gqr{
+  font-size: 30px;
+  font-weight: 900;
+text-shadow: 2px 0px 0px rgba(206,89,55,0.77);
+}
+
+/* From uiverse.io by @kirzin */
+.button {
+  text-decoration: none;
+ 
+  border: none;
+  font-size: 14px;
+  font-family: inherit;
+  color: #fff;
+  width: 9em;
+  height: 3em;
+  line-height: 2em;
+  text-align: center;
+  background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+  background-size: 300%;
+  border-radius: 30px;
+  z-index: 1;
+ }
+ 
+ .button:hover {
+  animation: ani 8s linear infinite;
+  border: none;
+ }
+ 
+ @keyframes ani {
+  0% {
+   background-position: 0%;
+  }
+ 
+  100% {
+   background-position: 400%;
+  }
+ }
+ 
+ .button:before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: -1;
+  background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+  background-size: 400%;
+  border-radius: 35px;
+  transition: 1s;
+ }
+ 
+ .button:hover::before {
+  filter: blur(20px);
+ }
+ 
+ .button:active {
+  background: linear-gradient(32deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+ }
+ .but{
+  color: black;
+  font-weight: 800;
+  background: linear-gradient(90deg,#ff9b05,#70f5b3,hsl(239, 82%, 75%),#ed7098);
+ }
